# cmake_test

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: first_script.cmake
cmake_demo/: CMakeLists.txt
cmake_demo/c_sharp/: CMakeLists.txt
cmake_demo/c_sharp/properties/: AssemblyInfo.cs
cmake_demo/c_sharp/src/: App.config  Program.cs
cmake_demo/executable/: CMakeLists.txt
cmake_demo/executable/src/: LocalFunction.cpp  LocalFunction.h  Main.cpp
cmake_demo/static_lib/: CMakeLists.txt
cmake_demo/static_lib/inc/static_lib/: SomeClass.h
cmake_demo/static_lib/src/: SomeClass.cpp
